teste falho de por uma troca de temas

--- a/portfolio-card/assets/css/style.css
+++ b/portfolio-card/assets/css/style.css
@@ -43,7 +43,7 @@
       hsl(35, 100%, 68%));
 
   /* solid */
-
+  --light-theme:hsl(240, 5%, 75%);
   --jet: hsl(0, 0%, 22%);
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
