--- a/portfolio-card/assets/css/style.css
+++ b/portfolio-card/assets/css/style.css
@@ -30,17 +30,18 @@
       hsla(240, 1%, 18%, 0.251) 0%,
       hsla(240, 2%, 11%, 0) 100%), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(to bottom right,
-      hsl(45, 100%, 71%) 0%,
-      hsla(36, 100%, 69%, 0) 50%);
+  rgba(164,128,242,1) 0%,
+  rgb(33, 1, 42) 50%);
   --bg-gradient-yellow-2: linear-gradient(135deg,
-      hsla(45, 100%, 71%, 0.251) 0%,
+      rgba(93, 52, 126, 0.66) 0%,
       hsla(35, 100%, 68%, 0) 59.86%), hsl(240, 2%, 13%);
   --border-gradient-onyx: linear-gradient(to bottom right,
       hsl(0, 0%, 25%) 0%,
       hsla(0, 0%, 25%, 0) 50%);
-  --text-gradient-yellow: linear-gradient(to right,
-      hsl(45, 100%, 72%),
-      hsl(35, 100%, 68%));
+      --text-gradient-yellow: linear-gradient(90deg,
+       rgba(164,128,242,1) 45%,
+       rgba(93,52,126,1) 91%,
+       rgba(61,18,74,1) 100%);
 
   /* solid */
   --light-theme:hsl(240, 5%, 75%);
@@ -51,8 +52,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
+  --orange-yellow-crayola: hsl(270, 100%, 69%);
+  --vegas-gold: hsl(259, 81%, 73%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -361,12 +362,20 @@ main {
 }
 
 .avatar-box {
-  background: var(--bg-gradient-onyx);
+  background: transparent;
+  /* var(--bg-gradient-onyx) */
   border-radius: 20px;
+  transition: .3s ease-in-out;
 }
 
 .avatar-box>img:nth-child(1) {
+  transition: .3s ease-in-out;
   border-radius: 10px;
+  cursor: pointer;
+}
+
+.avatar-box>img:nth-child(1):hover {
+  transform: translateY(-25%);
 }
 
 
