--- a/portfolio-card/assets/css/switch.css
+++ b/portfolio-card/assets/css/switch.css
@@ -15,6 +15,14 @@
     box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
     cursor: pointer;
   }
+
+  @media (max-width: 580px) {
+    .slider {
+      width: 48px;
+      height: 19px;
+     }
+     
+  }
   
   .slider::before {
     content: '';
