--- a/website-games/css/style.css
+++ b/website-games/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300,400,500,600,700,800,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 
 @font-face {
     font-family: 'Octosquare';
@@ -69,6 +69,7 @@ header ul li a {
     padding: 6px 15px;
     color: #ff0f7b;
     border-radius: 20px;
+    transition: 0.5s;
 }
 
 header ul li a:hover,
@@ -104,7 +105,7 @@ h1 a#logo {
     text-align: start;
     font-size: 45px;
     font-weight: 900;
-    font-family: 'Pixel';
+    font-family: 'Alfa Slab One', cursive;
 }
 
 #main-logo {
